[package]
name = "blueshiftgit init"
version = "0.1.0"
edition = "2021"

[dependencies]
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve", version = "0.1.0" }
pinocchio = "0.10.1"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = { version = "2.0", features = ["sha2", "syscalls", "curve25519"] }
[lib]
crate-type = ["lib", "cdylib"]